--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "mobx": "^5.15.4",
+    "mobx-react-lite": "^2.0.7",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.0.2",
     "react-scripts": "3.4.1",
     "typescript": "~3.7.2"
   },
